tests/snapshots/run_wpt_conformance__coreml_triangular_float16_4D_tensor_fully_copied_options_upper_false_options_diagonal_3.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float16 4D tensor fully copied options.upper=false options.diagonal=3",
    "coreml",
    "PASS",
)
